<resources>
    <string name="app_name">Valorant Stat Tracker</string>
    <string name="win">Win</string>
    <string name="lose">Lose</string>
    <string name="draw">Draw</string>
    <string name="game_results">Game\nResults</string>
    <string name="kda">%d/%d/%d</string>
    <string name="add_game_button_desc">New game</string>
    <string name="agent">Agent</string>
    <string name="result">Result</string>
    <string name="combat_score">Combat Score</string>
    <string name="combat_score_display">Combat Score: %d</string>
    <string name="kills">Kills</string>
    <string name="kills_display">Kills: %d</string>
    <string name="deaths">Deaths</string>
    <string name="deaths_display">Deaths: %d</string>
    <string name="assists">Assists</string>
    <string name="assists_display">Assists: %d</string>
    <string name="economy_rating">Economy Rating</string>
    <string name="econ_rating_display">Economy Rating: %d</string>
    <string name="first_bloods">First Bloods</string>
    <string name="first_bloods_display">First Bloods: %d</string>
    <string name="plants">Plants</string>
    <string name="plants_display">Plants: %d</string>
    <string name="defuses">Defuses</string>
    <string name="defuses_display">Defuses: %d</string>
    <string name="confirm">Confirm</string>
    <string name="amount_selected">%d selected</string>
    <string name="one_game_deleted">1 game deleted</string>
    <string name="games_deleted">%d games deleted</string>
    <string name="undo">Undo</string>
    <string name="win_display">Wins: %d</string>
    <string name="lose_display">Losses %d:</string>
    <string name="draw_display">Draws: %d</string>

    <string name="error_number_required">A number is required</string>
    <string name="error_input_required">Input is required</string>
    <string name="invalid_data">Some of the data is invalid</string>
    <string name="game_history">Game History</string>
    <string name="new_game">New Game</string>

    <string name="games">Games</string>
    <string name="insights">Insights</string>
    <string name="nothing_here">There\'s nothing here…</string>
</resources>